--- a/src/Components/formBody.css
+++ b/src/Components/formBody.css
@@ -8,6 +8,183 @@
   grid-template-columns: 50% 50%;
 }
 
+.form-check-label {
+  margin-left: 0.8rem;
+}
+
+.form-label-name {
+  margin-top: 0.8rem;
+  margin-bottom: 0.8rem;
+}
+.form-control-board {
+  margin-top: 0.8rem;
+  margin-bottom: 0.8rem;
+  width: 95%;
+  border: 0.5px solid #ccc;
+  border-radius: 0.3rem;
+  margin-bottom: 1rem;
+  padding: 0.4rem;
+}
+.form-label-name-person {
+  margin-top: 0.8rem;
+  margin-bottom: 1rem;
+}
+
+.form-label-serving {
+  margin-top: 0.1rem;
+  margin-bottom: 1rem;
+}
+
+.form-label-choice {
+  margin-top: 0.4rem;
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.form-label-choice-1 {
+  margin-top: 0.1rem;
+  margin-bottom: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.branch-form{
+  margin-top: 0.4rem;
+  margin-bottom: 0.4rem;
+
+}
+
+.form-label-1{
+  margin-top: 0.5rem;
+}
+.form-label-2{
+  margin-top: 0.5rem;
+}
+.form-label-3{
+  margin-top: 0.5rem;
+}
+.form-label-4{
+  margin-top: 0.5rem;
+}
+.form-label-5{
+  margin-top: 0.5rem;
+}
+.form-label-6{
+  margin-top: 0.5rem;
+}
+.form-label-7{
+  margin-top: 0.5rem;
+}
+
+.form-select-1{
+  border: 0.5px solid #ccc;
+  border-radius: 0.3rem;
+  margin-bottom: 0.5rem;
+  padding: 0.4rem;
+}
+
+.form-label-dec{
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.form-label-prio{
+  margin-top: 0.1rem;
+  margin-bottom: 0.3rem;
+}
+
+.form-control-address {
+  width: 98%;
+  margin-top: 0.8rem;
+  border: 0.5px solid #ccc;
+  border-radius: 0.3rem;
+  margin-bottom: 0.5rem;
+  padding: 0.4rem;
+}
+.form-control-address-1 {
+  width: 100%;
+  margin-top: 0.8rem;
+  border: 0.5px solid #ccc;
+  border-radius: 0.3rem;
+  margin-bottom: 0.5rem;
+  padding: 0.4rem;
+}
+
+
+.form-control-address-34 {
+  width: 103%;
+  margin-top: 0.8rem;
+  border: 0.5px solid #ccc;
+  border-radius: 0.3rem;
+  margin-bottom: 0.5rem;
+  padding: 0.4rem;
+}
+
+.form-control-address-3 {
+  width: 100%;
+  margin-top: 0.8rem;
+  border: 0.5px solid #ccc;
+  border-radius: 0.3rem;
+  margin-bottom: 0.5rem;
+  padding: 0.4rem;
+}
+
+.form-label-choice{
+  width: 100%;
+  border-radius: 0.3rem;
+  padding: 0.4rem;
+}
+
+.form-label-address {
+  margin-top: 0.8rem;
+  margin-bottom: 0.5rem;
+}
+
+.form-label-corres {
+  margin-top: 0.8rem;
+  margin-bottom: 0.2rem;
+}
+
+.form-label {
+  margin-bottom: 1rem;
+}
+
+.form-control {
+  margin-right: 0.5rem;
+}
+
+.form-control-1 {
+  border: 0.5px solid #ccc;
+  border-radius: 0.3rem;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+  padding: 0.4rem;
+}
+.form-control-2 {
+  border: 0.5px solid #ccc;
+  border-radius: 0.3rem;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+  padding: 0.4rem;
+}
+.marks {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 0.4rem;
+}
+
+.form-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .form-half1 {
   margin-right: 1rem;
 }
@@ -27,10 +204,12 @@
 }
 
 .exam-marks-body {
-  border: black 2px solid;
+  border: black 1px solid;
   display: grid;
   grid-template-columns: 33% 33% 33%;
   margin-right: 5rem;
+  border-radius: 0.4rem;
+  padding:0.4rem;
 }
 
 .area {
