--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,18 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+body::-webkit-scrollbar{
+  width: 9px;
+  background-color: #fff;
+}
+body::-webkit-scrollbar-thumb{
+  border-radius: 10px;
+  background-color: #74C5F3;
+}
+body::-webkit-scrollbar-track{
+  border-radius: 10px;
+  background-color: #fff;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
